focus effect update

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -20,7 +20,7 @@
  HKG_anti_graft_investigations: "Anti-Graft Investigations"
  HKG_anti_graft_investigations_desc: ""
  HKG_take_on_triads: "Take on the Triads"
- HKG_take_on_triads_desc: ""
+ HKG_take_on_triads_desc: "The Triads have always been a major concern for Hong Kong's stability. While the darkness of a city can never go away, we must at least keep it to a minimum."
  HKG_increase_funding_for_OCTB: "Increase Funding for the OCTB"
  HKG_increase_funding_for_OCTB_desc: ""
  HKG_step_up_police_raids: "Step Up Police Raids"
@@ -114,12 +114,10 @@
  HKG_pearl_of_east_asia_desc: ""
  
  #Economy
- HKG_under_lion_rock_hill: "Under the Lion Rock Hill"
- HKG_under_lion_rock_hill_desc: ""
- HKG_prevent_racial_discrimination: "Prevent Racial Discrimination"
- HKG_prevent_racial_discrimination_desc: ""
- HKG_make_law_applicable_to_government: "Make the Law Applicable to the Government"
- HKG_make_law_applicable_to_government_desc: ""
+ HKG_under_lion_rock_hill: "Below the Lion Rock Hill"
+ HKG_under_lion_rock_hill_desc: "Below the Lion Rock Hill, Hong Kong, which has just experienced the financial turmoil and entered the millennium, is facing many social problems. How to solve them, is left to the judgement of the Government."
+ HKG_race_discrimination_bill: "Race Discrimination Bill"
+ HKG_race_discrimination_bill_desc: "The Basic Law and the Hong Kong Bill of Rights Ordinance safeguard the rights of individuals, including the right against racial discrimination. We also have obligation, under the International Convention on the Elimination of All Forms of Racial Discrimination, to prohibit and to eliminate racial discrimination. "
  HKG_LGBT_rights: "LGBT Rights"
  HKG_LGBT_rights_desc: ""
  HKG_affirm_support_for_christian_organizations: "Affirm Support for Christian Organizations"
@@ -317,8 +315,8 @@
  HKG_LegCo_TITLE: "Legislative Council"
 
  legco_pro_beijing_camp_desc: "§CPro-establishment camp§!:\n £HKG_Conservative Democratic Alliance for the Betterment of Hong Kong (DAB)\n £HKG_Autocracy The New People's Party (NPP)\n £HKG_anarchist_communism Hong Kong Federation of Trade Unions (HKFTU)\n £HKG_Neutral_conservatism Path of Democracy\n £HK_Liberal_Party Liberal Party\n £generic_Neutral_Libertarian_small Third Side\n"
- legco_pan_democracy_camp_desc: "§8Pan-democracy camp§!:\n £HK_Demosisto Demosisto\n £HKG_conservatism Democratic Party\n [legco_HKG_liberalism]\n [legco_HKG_socialism]\n £HKG_Neutral_Autocracy Democratic Alliance\n £HK_Green Green Party Hong Kong\n"
- legco_localist_camp_desc: "§GLocalist camp§!:\n £HK_Indigenous Hong Kong Indigenous\n £HK_National Hong Kong National Party\n £HK_People_Power People Power\n £HK_Conservative_Alt_New Conservative Party"
+ legco_pan_democracy_camp_desc: "§8Pan-democracy camp§!:\n £HK_Demosisto Demosisto\n £HKG_conservatism Democratic Party\n [legco_HKG_liberalism]\n [legco_HKG_socialism]\n £HKG_Neutral_Autocracy Democratic Alliance\n £HK_Green Green Party Hong Kong\n £HK_Left Left 21\n £HK_Fourth_International Revolutionary Communist Party of China\n"
+ legco_localist_camp_desc: "§GLocalist camp§!:\n £HK_Indigenous Hong Kong Indigenous\n £HK_National Hong Kong National Party\n £HK_People_Power People Power\n £HK_Conservative_Alt_New Conservative Party\n"
 
  legco_pro_beijing_seats: "§CPro-establishment Camp§! Seats: §C[?legco_PE_seats]§!"
  legco_pan_democracy_seats: "§8Pan-democracy Camp§! Seats: §8[?legco_PD_seats]§!"
@@ -340,22 +338,24 @@
  legco_decision_effect_tt: "If the §Gapproval seats§! are greater than the number of §Yrequired seats§! (§G[?legco_approval_seats]§! > §Y[?legco_required_seats]§!):"
  legco_railway_development_strategy_2000_tt: "Railway Development Strategy 2000"
  legco_electoral_reform_tt: "Electoral Reform"
+ legco_race_discrimination_bill_tt: "Race Discrimination Bill"
  legco_electoral_reform_forward_tt: "The Proposals for selecting the Chief Executive and forming the LegCo"
  legco_funding_XRL_tt: "Funding of §3XRL HK section§!"
  legco_co_location_bill_tt: "Co-Location Bill"
 
+ legco_race_discrimination_bill_focus_tt: "The Motion §YRace Discrimination Bill§! will be voted in the §YLegCo§!."
  legco_railway_development_strategy_2000_focus_tt: "The Motion §YRailway Development Strategy 2000§! will be voted in the §YLegCo§!."
  legco_approve_funding_for_XRL_focus_tt: "The §YFunding§! of §3XRL HK section§! will be voted in the §YLegCo§!."
  legco_electoral_reform_focus_tt: "The Motion §YElectoral Reform§! will be voted in the §YLegCo§! after Mainland's Goverment §Raccept it§!."
 
- legco_effect_railway_development_strategy_2000_tt: "Add §YRailway Development Strategy 2000§!, which grants()"
- legco_effect_approve_funding_for_XRL_tt: "[HKG.GetFlag]Hong Kong §YTreasury§!: $-0.25 Billion\n§YHong Kong§! Add §G1§! §YRailways§! in a Province in the state.\n([CHI.GetFlag]People's Republic of China)[CHI.GetFlag]Chinese §YTreasury§!: $-0.75 Billion\n§YPearl River Delta§!:\n  Add §G3§! §YRailways§! in a province in the state"
+ legco_effect_railway_development_strategy_2000_tt: "Gains '§YRailway Development Strategy 2000§!', which grants() for §Y3650§! day(s)."
+ legco_effect_approve_funding_for_XRL_tt: "[HKG.GetFlag]Hong Kong §YTreasury§!: $-0.25 Billion\n§YHong Kong§! Add §G1§! §YRailways§! in a Province in the state.\n([CHI.GetFlag]People's Republic of China)[CHI.GetFlag]Chinese §YTreasury§!: $-0.75 Billion\n§YPearl River Delta§!:\n  Add §G3§! §YRailways§! in a province in the state."
  legco_effect_electoral_reform_tt: "This motion's effect is decided by §YMainland's goverment choice§!."
 
  legco_test_text: "<WIP>"
  legco_election_reform_a_effect_tt: "§YEffect:§!\n §OMaintain the status quo§!\n§RThis may cause some to be upset.§!"
  legco_election_reform_b_effect_tt: "§YEffect:§!\n The number of §Yelectoral commissioners§! in the §LElectoral Commission§! will §Gincrease§! by §Y800§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y10§!\n §gThe \"timetable for universal suffrage\" wouldn't be drawn up.§!\n§YThis may cause some to be upset.§!"
- legco_election_reform_c_effect_tt: "§YEffect:§!\n Since the next election will be by §4universal suffrage§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y30§!.\n §YAbolish§! §4\"Functional constituency\"§!"
+ legco_election_reform_c_effect_tt: "§YEffect:§!\n Since the next election will be by §4universal suffrage§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y30§!.\n §YAbolish§! §4\"Functional constituency\"§!."
  #DYNAMIC MODIFIERS
  #Housing Issue
  UHM_dynamic_modifies_TT: "\nModify §Y$HKG_unrestricted_housing_market$§! by"
