--- a/localisation/french/MD_focus_IRQ_l_french.yml
+++ b/localisation/french/MD_focus_IRQ_l_french.yml
@@ -1904,3 +1904,4 @@
  IRQ_nuclear_experts: "Nuclear Experts"
  IRQ_controlled_instability_idea: "Controlled Instability"
  IRQ_mek_revolted_already: "MEK Revolted Already"
+ IRQ_war_with_shias: "War with Shias"
