--- a/localisation/simp_chinese/MD_focus_IRQ_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_IRQ_l_simp_chinese.yml
@@ -1904,3 +1904,4 @@
  IRQ_nuclear_experts: "原子专家"
  IRQ_controlled_instability_idea: "受控不稳定性"
  IRQ_mek_revolted_already: "伊朗人民圣战者组织已经反抗了"
+ IRQ_war_with_shias: "与什叶派开战"
