--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -6,7 +6,7 @@
  HKG_combat_vested_interests: "Combat Vested Interests"
  HKG_combat_vested_interests_desc: "The New Year has passed, everything is renewed. The advent of the milliennium has brought a new future for Hong Kong."
  HKG_take_on_heung_ye_kuk: "Take on the Heung Yee Kuk"
- HKG_take_on_heung_ye_kuk_desc: ""
+ HKG_take_on_heung_ye_kuk_desc: "Heung Yee Kuk is a product of the olden days of the New Territories, and has a transcendent independence compared to other areas. But they are not as obedient as we expected, so it seems that we have to give them some warn properly..."
  HKG_repeal_small_house_policy: "Repeal the Small House Policy"
  HKG_repeal_small_house_policy_desc: ""
  HKG_reform_heung_yee_kuk: "Reform the Heung Yee Kuk"
@@ -14,7 +14,7 @@
  HKG_dissolve_heung_yee_kuk: "Dissolve the Heung Yee Kuk"
  HKG_dissolve_heung_yee_kuk_desc: ""
  HKG_take_on_politicians: "Take on the Politicians"
- HKG_take_on_politicians_desc: ""
+ HKG_take_on_politicians_desc: "Hong Kong's government is still full of bureaucrats from the old days. In order to stabilise the regime, we must tackle them."
  HKG_ensure_autonomy_of_ICAC: "Ensure the Autonomy of the ICAC"
  HKG_ensure_autonomy_of_ICAC_desc: ""
  HKG_anti_graft_investigations: "Anti-Graft Investigations"
@@ -25,13 +25,13 @@
  HKG_increase_funding_for_OCTB_desc: ""
  HKG_step_up_police_raids: "Step Up Police Raids"
  HKG_step_up_police_raids_desc: ""
- HKG_crack_down_on_WSW_triad: "Crack Down on the Wo Shing Wo Triad"
+ HKG_crack_down_on_WSW_triad: "Crack Down on the Wo Shing Wo Triad" #secondhand market  mobile phones, electronic appliances, stolen cars and exchange of weaponry
  HKG_crack_down_on_WSW_triad_desc: ""
- HKG_crack_down_on_SYO_triad: "Crack Down on the Sun Yee On Triad"
+ HKG_crack_down_on_SYO_triad: "Crack Down on the Sun Yee On Triad" #protection racket and Brothel
  HKG_crack_down_on_SYO_triad_desc: ""
- HKG_crack_down_on_14K_triad: "Crack Down on the 14K Triads"
+ HKG_crack_down_on_14K_triad: "Crack Down on the 14K Triads" #drug baron
  HKG_crack_down_on_14K_triad_desc: ""
- HKG_crack_down_on_Luen_group_triad: "Crack Down on the Luen Group Triads"
+ HKG_crack_down_on_Luen_group_triad: "Crack Down on the Luen Group Triads" #illegal gambling clubs
  HKG_crack_down_on_Luen_group_triad_desc: ""
 
  #politics
@@ -50,9 +50,9 @@
  HKG_electoral_reform: "Electoral Reform"
  HKG_electoral_reform_desc: "The Basic Law set out the selecting method of the Chief Executive of Hong Kong for the first two terms and the LegCo for the first three terms. It does not, however, stipulate how elections should be conducted after that. Perhaps we can take this opportunity to push for a reform of our electoral system to achieve genuine universal suffrage."
  HKG_a_broader_electorate: "A Broader Electorate?"
- HKG_a_broader_electorate_desc: ""
+ HKG_a_broader_electorate_desc: "Universal suffrage in Hong Kong cannot be implemented overnight. Although we cannot implement universal suffrage immediately, we can first request the NPCSC to expand the number of members of the Election Committee, let the election can be more democratic than before."
  HKG_choose_your_own_puppet: "\"Choose Your Own Puppet\""
- HKG_choose_your_own_puppet_desc: ""
+ HKG_choose_your_own_puppet_desc: "Universal suffrage in Hong Kong must be achieved, but we must not lose our stability for the sake of democracy. The nominating committee will ensure that only those who are truly "patriotic for China and Hong Kong" will become the Chief Executive."
  HKG_a_new_reform_attempt: "A New Reform Attempt"
  HKG_a_new_reform_attempt_desc: ""
  HKG_support_pan_democrats: "Support the Pan-Democrats"
@@ -64,7 +64,7 @@
  #the decision of the future
  HKG_stick_to_CPC_line: "Stick to the CPC Line"
  HKG_stick_to_CPC_line_desc: ""
- HKG_loyal_puppet: "The Loyal Puppet"
+ HKG_loyal_puppet: "\"The Loyal Puppet\""
  HKG_loyal_puppet_desc: ""
  HKG_promote_patriotism: "Promote Patriotism"
  HKG_promote_patriotism_desc: ""
@@ -75,7 +75,7 @@
  HKG_reduce_size_of_LegCo: "Reduce size of the LegCo"
  HKG_reduce_size_of_LegCo_desc: ""
  HKG_gong_zyu_ou_integration: "Hong Kong-Zhuhai-Macao Integration"
- HKG_gong_zyu_ou_integration_desc: ""
+ HKG_gong_zyu_ou_integration_desc: "\"One country, Two systems\" in Hong Kong is China's great experiment in resolving the Taiwan question, but Hong Kong cannot maintain its unique status forever, especially after the failure of this experiment..."
 
  HKG_support_democracy_in_china: "Support Democracy in China"
  HKG_support_democracy_in_china_desc: ""
@@ -89,23 +89,23 @@
  HKG_appease_localists: "Appease Localists"
  HKG_appease_localists_desc: ""
  HKG_stoke_anti_mainland_sentiment: "Stoke Anti-Mainland Sentiment"
- HKG_stoke_anti_mainland_sentiment_desc: ""
+ HKG_stoke_anti_mainland_sentiment_desc: "China took away all the benefits and left Hong Kong people with high property prices and low purchasing power. Why should Hong Kong remain with China and be willing to be a tiny colony of China?"
  HKG_restrict_tourism_immigration: "Restrict Tourism & Immigration"
  HKG_restrict_tourism_immigration_desc: ""
  HKG_emphasize_hong_kong_identity: "Emphasize Hong Kong Identity"
- HKG_emphasize_hong_kong_identity_desc: ""
+ HKG_emphasize_hong_kong_identity_desc: "Singapore's successful breakaway from Malaysia was due to Mr Lee Kuan Yew's successful national identity consciousness reforms. Hong Kong is perfectly capable of adopting the same approach."
  HKG_distance_from_china: "Distance from China"
- HKG_distance_from_china_desc: ""
+ HKG_distance_from_china_desc: "Hong Kong, it's time to weigh anchor, to get out of China's control..."
  HKG_great_hong_kong_nation: "Great Hong Kong Nation"
- HKG_great_hong_kong_nation_desc: ""
+ HKG_great_hong_kong_nation_desc: "The things has changed, and the Hong Kong state finally get its real independent."
  HKG_hong_kong_first: "Hong Kong First"
  HKG_hong_kong_first_desc: ""
  HKG_hong_kong_state_constitution: "New Hong Kong State Constitution"
  HKG_hong_kong_state_constitution_desc: ""
  HKG_little_bird_under_british_wing: "Little Bird Under British Wing"
- HKG_little_bird_under_british_wing_desc: ""
+ HKG_little_bird_under_british_wing_desc: "The fact that Hong Kong has seceded from China does not mean that she can survive in the world on her own. We need the assistance of others. How about our old British masters?"
  HKG_request_rerule_british_government: "Request for Re-ruled by British Government"
- HKG_request_rerule_british_government_desc: ""
+ HKG_request_rerule_british_government_desc: "Once upon a time, the Sino-British negotiations never honoured the wishes of the Hong Kong people for remaining within the British Empire. This time, we will follow our own hearts."
  HKG_city_state_idea: "The City-state Idea"
  HKG_city_state_idea_desc: ""
  HKG_revise_basic_law: "Revise Basic Law"
@@ -114,10 +114,10 @@
  HKG_pearl_of_east_asia_desc: ""
  
  #Economy
- HKG_under_lion_rock_hill: "Below the Lion Rock Hill"
- HKG_under_lion_rock_hill_desc: "Below the Lion Rock Hill, Hong Kong, which has just experienced the financial turmoil and entered the millennium, is facing many social problems. How to solve them, is left to the judgement of the Government."
+ HKG_under_lion_rock_hill: "Below the Lion Rock"
+ HKG_under_lion_rock_hill_desc: "Below the Lion Rock, Hong Kong, which has just experienced the financial turmoil and entered the millennium, is facing many social problems. How to solve them, is left to the judgement of the Government."
  HKG_race_discrimination_bill: "Race Discrimination Bill"
- HKG_race_discrimination_bill_desc: "The Basic Law and the Hong Kong Bill of Rights Ordinance safeguard the rights of individuals, including the right against racial discrimination. We also have obligation, under the International Convention on the Elimination of All Forms of Racial Discrimination, to prohibit and to eliminate racial discrimination. "
+ HKG_race_discrimination_bill_desc: "The Basic Law and the Hong Kong Bill of Rights Ordinance safeguard the rights of individuals, including the right against racial discrimination. We also have obligation, under the International Convention on the Elimination of All Forms of Racial Discrimination, to prohibit and to eliminate racial discrimination."
  HKG_LGBT_rights: "LGBT Rights"
  HKG_LGBT_rights_desc: ""
  HKG_affirm_support_for_christian_organizations: "Affirm Support for Christian Organizations"
